# aoc-rs

./: .gitignore  .gitmodules  Cargo.toml  Cargo.toml.old  build.rs
src/: itertools2.rs  lib.rs  parser.rs
src/util/: arrays.rs  arrays2d.rs  cast.rs  display_blocks.rs  fixed_graphs.rs  gcdlcm.rs  graphs.rs  grid.rs  helper_structs.rs  hypercube_set.rs  hypercuboid_set.rs  iter_cast.rs  linalg2.rs  mod.rs  save.rs  transpose.rs
