workspace = { members = ["range-utils"] }
[package]
name = "aoc-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.4.1"
cfg-if = "1.0.0"
itertools = "0.13.0"
nom = "7.1.3"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
range-utils = { git = "https://github.com/M1ngXU/range-utils.git" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
gcd = "2.3.0"
linked-hash-map = "0.5.6"
num = { version = "0.4.3", features = ["num-bigint", "rand", "serde"] }
nalgebra = { version = "0.33.2", features = ["rand", "sparse"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rustworkx-core = "0.15.1"
petgraph = "0.6.5"
z3 = { git = "https://github.com/prove-rs/z3.rs.git", version = "0.12.1" }

[features]
ex = []
dex = []

[[bin]]
name = "2201"
path = "bin/2022/01/bin.rs"

[[bin]]
name = "2202"
path = "bin/2022/02/bin.rs"

[[bin]]
name = "2203"
path = "bin/2022/03/bin.rs"

[[bin]]
name = "2204"
path = "bin/2022/04/bin.rs"

[[bin]]
name = "2205"
path = "bin/2022/05/bin.rs"

[[bin]]
name = "2206"
path = "bin/2022/06/bin.rs"

[[bin]]
name = "2207"
path = "bin/2022/07/bin.rs"

[[bin]]
name = "2208"
path = "bin/2022/08/bin.rs"

[[bin]]
name = "2209"
path = "bin/2022/09/bin.rs"

[[bin]]
name = "2210"
path = "bin/2022/10/bin.rs"

[[bin]]
name = "2211"
path = "bin/2022/11/bin.rs"

[[bin]]
name = "2212"
path = "bin/2022/12/bin.rs"

[[bin]]
name = "2213"
path = "bin/2022/13/bin.rs"

[[bin]]
name = "2214"
path = "bin/2022/14/bin.rs"

[[bin]]
name = "2215"
path = "bin/2022/15/bin.rs"

[[bin]]
name = "2216"
path = "bin/2022/16/bin.rs"

[[bin]]
name = "2301"
path = "bin/2023/01/bin.rs"

[[bin]]
name = "2302"
path = "bin/2023/02/bin.rs"

[[bin]]
name = "2303"
path = "bin/2023/03/bin.rs"

[[bin]]
name = "2304"
path = "bin/2023/04/bin.rs"

[[bin]]
name = "2305"
path = "bin/2023/05/bin.rs"

[[bin]]
name = "2306"
path = "bin/2023/06/bin.rs"

[[bin]]
name = "2307"
path = "bin/2023/07/bin.rs"

[[bin]]
name = "2308"
path = "bin/2023/08/bin.rs"

[[bin]]
name = "2309"
path = "bin/2023/09/bin.rs"

[[bin]]
name = "2310"
path = "bin/2023/10/bin.rs"

[[bin]]
name = "2311"
path = "bin/2023/11/bin.rs"

[[bin]]
name = "2312"
path = "bin/2023/12/bin.rs"

[[bin]]
name = "2313"
path = "bin/2023/13/bin.rs"

[[bin]]
name = "2314"
path = "bin/2023/14/bin.rs"

[[bin]]
name = "2315"
path = "bin/2023/15/bin.rs"

[[bin]]
name = "2316"
path = "bin/2023/16/bin.rs"

[[bin]]
name = "2317"
path = "bin/2023/17/bin.rs"

[[bin]]
name = "2318"
path = "bin/2023/18/bin.rs"

[[bin]]
name = "2319"
path = "bin/2023/19/bin.rs"

[[bin]]
name = "2320"
path = "bin/2023/20/bin.rs"

[[bin]]
name = "2321"
path = "bin/2023/21/bin.rs"

[[bin]]
name = "2322"
path = "bin/2023/22/bin.rs"

[[bin]]
name = "2323"
path = "bin/2023/23/bin.rs"

[[bin]]
name = "2324"
path = "bin/2023/24/bin.rs"

[[bin]]
name = "2325"
path = "bin/2023/25/bin.rs"

[[bin]]
name = "cses01"
path = "bin/cses/01.rs"
