workspace = { members = ["range-utils"] }
[package]
name = "aoc-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.4.1"
cfg-if = "1.0.0"
criterion = { version = "0.5", optional = true }
itertools = "0.13.0"
nom = "7.1.3"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
range-utils = { git = "https://github.com/M1ngXU/range-utils.git" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
gcd = "2.3.0"
linked-hash-map = "0.5.6"
num = { version = "0.4.3", features = ["num-bigint", "rand", "serde"] }
nalgebra = { version = "0.33.2", features = ["rand", "sparse"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rustworkx-core = "0.15.1"
petgraph = "0.6.5"
z3 = { git = "https://github.com/prove-rs/z3.rs.git", version = "0.12.1" }

[features]
ex = []
dex = []
benchmarking = ["criterion"]

[[bench]]
name = "2402"
path = "bin/2024/02/bin.rs"
harness = false

[[bin]]
name = "2403"
path = "bin/2024/03/bin.rs"

[[bench]]
name = "2403"
path = "bin/2024/03/bin.rs"
harness = false

[[bin]]
name = "2402"
path = "bin/2024/02/bin.rs"

[[bench]]
name = "2401"
path = "bin/2024/01/bin.rs"
harness = false

[[bin]]
name = "2401"
path = "bin/2024/01/bin.rs"